syntax = "proto3";

package auth;

option go_package = "group_service/proto";

message FindUserRequest {
    uint32 user_id = 1;
}

message UserResponse {
    string email = 1;
    string username = 2;
}
